--- a/requirements_github.txt
+++ b/requirements_github.txt
@@ -1,16 +1,17 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-streamlit==1.28.1
-pydantic==2.5.0
-python-dotenv==1.0.0
-openai==1.3.0
-langchain==0.0.339
-langchain-openai==0.0.2
-langgraph==0.0.26
-requests==2.31.0
-duckduckgo-search==3.9.6
-wikipedia-api==0.6.0
-numpy==1.24.4
-scikit-learn==1.3.2
-tiktoken==0.5.1
-pytest==7.4.3
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+streamlit>=1.48.1
+pydantic>=2.9.0
+python-dotenv>=1.0.0
+openai>=1.52.0
+langchain>=0.3.0
+langchain-openai>=0.2.0
+langchain-community>=0.3.0
+langgraph>=0.2.0
+requests>=2.32.5
+duckduckgo-search>=3.9.6
+wikipedia>=1.4.0
+numpy>=2.1.0
+scikit-learn>=1.5.0
+tiktoken>=0.7.0
+pytest>=8.3.0
