--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ langchain-openai>=0.2.0
 langchain-community>=0.3.0
 langgraph>=0.2.0
 requests>=2.32.5
-duckduckgo-search>=3.9.6
+ddgs>=4.0.0
 wikipedia>=1.4.0
 numpy>=2.1.0
 scikit-learn>=1.5.0
